      Commit f58c25069cf4a986fe17a80c5b38687e31feb539
>>>>>>>>>>>>> SECURITY >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
  * Fixed: Be fully compliant to C89 (Gitub #28) and C++98 in test code
  * Fixed: Fix off-by-one in uriComposeQueryCharsRequired* and ...Ex*
      Reported space requirements were 1 byte bigger than necessary
  * Added: Support for custom memory managers (GitHub #26, #35), see Doxygen
      New functions (as extension of existing ones):
        uriAddBaseUriExMm[AW]
        uriComposeQueryMallocExMm[AW]
        uriDissectQueryMallocExMm[AW]
        uriFreeQueryListMm[AW]
        uriFreeUriMembersMm[AW]
        uriNormalizeSyntaxExMm[AW]
        uriParseUriExMm[AW]
        uriRemoveBaseUriMm[AW]
      New functions (for convenience):
        uriCompleteMemoryManager
        uriEmulateCalloc
        uriEmulateReallocarray
        uriTestMemoryManager
      New error codes:
        URI_ERROR_MEMORY_MANAGER_FAULTY
        URI_ERROR_MEMORY_MANAGER_INCOMPLETE
      New types:
        UriFuncCalloc
        UriFuncFree
        UriFuncMalloc
        UriFuncRealloc
        UriFuncReallocarray
        UriMemoryManager
  * Added: Add non-void versions of uriNormalizeSyntaxMaskRequired*
      New functions:
        uriNormalizeSyntaxMaskRequiredEx[AW]
  * Changed: Marked as deprecated:
      Deprecated functions:
        uriNormalizeSyntaxMaskRequired[AW]
  * Changed: Migrate test suite from CppTest to GoogleTest 1.8.1
  * Removed: Pointless define URI_SIZEDOWN / configure option --enable-sizedown
  * Soname: 1:23:0

2018-08-18 -- 0.8.6

  * Fixed: Bad/NULL .hostText.afterLast when parsing certain rather pathologic
      but well-formed URIs with empty host (e.g. "//:%aa@") (GitHub #15)
      Thanks to Kurt Schwehr for the report!
  * Fixed: Fix uriRemoveBaseUri for case where scheme, host name,
      IPvFuture address or path segments of the source address were
      string prefixes of the related counterpart in the base URI.