@@ -13,6 +13,11 @@
   * Fixed: Be fully compliant to C89 (Gitub #28) and C++98 in test code
   * Fixed: Fix off-by-one in uriComposeQueryCharsRequired* and ...Ex*
       Reported space requirements were 1 byte bigger than necessary
+  * Added: Add convenience functions to ease user code to parse a single URI
+      New functions:
+        uriParseSingleUri[AW]
+        uriParseSingleUriEx[AW]
+        uriParseSingleUriExMm[AW]
   * Added: Support for custom memory managers (GitHub #26, #35), see Doxygen
       New functions (as extension of existing ones):
         uriAddBaseUriExMm[AW]
@@ -21,6 +26,7 @@
         uriFreeQueryListMm[AW]
         uriFreeUriMembersMm[AW]
         uriNormalizeSyntaxExMm[AW]
+        uriParseSingleUriExMm[AW]
         uriParseUriExMm[AW]
         uriRemoveBaseUriMm[AW]
       New functions (for convenience):
